--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chai": "^4.3.10",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "hoek": "^0.0.1",
     "mocha": "^10.2.0",
     "ts-mocha": "^10.0.0",
     "typescript": "^5.2.2"
